--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,28 +1,12 @@
 ---
 ---
-@article{,
-  abbr={Conference},
+
+@article{bravevisionlangmodels2024,
   title={BRAVE: Broadening the visual encoding of vision-language models},
   author={Oğuzhan Fatih Kar, Alessio Tonioni, Petra Poklukar, Achin Kulshrestha, Amir Zamir, Federico Tombari.},
-  abstract={},
-  journal={},
-  location={},
-  volume={},
-  issue={},
-  pages={},
-  numpages={0},
-  year={2024},
-  month={},
-  doi={},
   url={https://arxiv.org/abs/2404.07204v1},
-  html={},
-  pdf={},
-  altmetric={},
-  dimensions={},
   google_scholar_id={uW7AaiYAAAAJ},
-  additional_info={},
-  acceptance={},
-  acceptance_rate={},
+  year={2024},
   selected={true}
 }
 
@@ -30,24 +14,11 @@
   abbr={Journal},
   title={An empirical study of HTML5 websockets and their cross browser behavior for mixed content and untrusted certificates?},
   author={Kulshrestha, A.},
-  abstract={},
   journal={IJCA},
-  location={},
   volume={82},
   issue={6},
-  pages={},
-  numpages={0},
   year={2014},
-  month={},
-  doi={},
   url={https://scholar.google.com/citations?view_op=view_citation&hl=en&user=uW7AaiYAAAAJ&citation_for_view=uW7AaiYAAAAJ:u5HHmVD_uO8C},
-  html={},
-  pdf={},
-  altmetric={},
-  dimensions={},
   google_scholar_id={uW7AaiYAAAAJ},
-  additional_info={},
-  acceptance={},
-  acceptance_rate={},
   selected={true}
 }
