--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,18 @@
 ---
 ---
+@string{aps = {arXiv,}}
 
 @article{bravevisionlangmodels2024,
   title={BRAVE: Broadening the visual encoding of vision-language models},
   author={Oğuzhan Fatih Kar, Alessio Tonioni, Petra Poklukar, Achin Kulshrestha, Amir Zamir, Federico Tombari.},
   url={https://arxiv.org/abs/2404.07204v1},
-  google_scholar_id={uW7AaiYAAAAJ},
+  html={https://arxiv.org/abs/2404.07204v1},
   year={2024},
+  publisher=aps,
   selected={true}
 }
 
 @article{IJCA.82.6,
-  abbr={Journal},
   title={An empirical study of HTML5 websockets and their cross browser behavior for mixed content and untrusted certificates?},
   author={Kulshrestha, A.},
   journal={IJCA},
@@ -19,6 +20,6 @@
   issue={6},
   year={2014},
   url={https://scholar.google.com/citations?view_op=view_citation&hl=en&user=uW7AaiYAAAAJ&citation_for_view=uW7AaiYAAAAJ:u5HHmVD_uO8C},
-  google_scholar_id={uW7AaiYAAAAJ},
+  html={https://scholar.google.com/citations?view_op=view_citation&hl=en&user=uW7AaiYAAAAJ&citation_for_view=uW7AaiYAAAAJ:u5HHmVD_uO8C},
   selected={true}
 }
